sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value c
    c=0
    ^AlgBubbleSort1:9: error: not found: value c
        c=c+1
        ^AlgBubbleSort1:11: error: not found: value c
      if (c==0){
          ^