sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var sorted=false
  while (sorted==false){
    c=0
    for (k <-0 to getNombreValeurs()-2){
      if (plusPetit(k+1,k)){
        echange(k,k+1)
        c=c+1
      }
      if (c==0){
        sorted=true
      }  
      
    }
    
  }
}